modify some detail

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -2,7 +2,7 @@
 # if you set it to "/" share icons won't work properly on production
 baseurl = "https://mxwey.com/"  # Include trailing slash
 # title = "Clarity"  # Edit directly from config/_default/languages.toml # alternatively, uncomment this and remove `title` entry from the aforemention file.
-copyright = "Copyright © 2023, All rights reserved."
+# copyright = "Copyright © 2023, All rights reserved."
 # canonifyurls = true
 paginate = 10
 theme = "hugo-clarity"
