--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -129,8 +129,8 @@ utterancesTheme = "github-light" # Default: github-dark
 # since = 2016
 
 # Show related content at the end of an article based on the 'series' taxonomy. Can be set in post front matter.
-# showRelatedInArticle = false
-# showRelatedInSidebar = false
+showRelatedInArticle = false
+showRelatedInSidebar = true
 
 # website author
 [author]
